UPD:Urls and Profile_Pic

--- a/Card/Profile_card.html
+++ b/Card/Profile_card.html
@@ -27,13 +27,13 @@
             </div>
         </div>
         <!-- Write your name here -->
-        <div class="username">Priyanshu Kashyap</div>
+        <div class="username">Swastika Paul</div>
         <!-- Write your profession here -->
         <div class="profession">Student</div>
         <div class="social-medias">
             <div class="facebook-icon">
                 <!-- Link to your facebook profile -->
-                <a href="https://www.facebook.com/profile.php?id=61550769088682&mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook-f" style="color: #ffffff; font-size: 12px;"></i></a>               
+                <a href=https://www.facebook.com/profile.php?id=61560834758520 target="_blank"><i class="fa-brands fa-facebook-f" style="color: #ffffff; font-size: 12px;"></i></a>               
             </div>
             <div class="twitter-icon">
                 <!-- Link to your twitter profile -->
@@ -41,11 +41,11 @@
             </div>
             <div class="instagram-icon">
                 <!-- Link to your Instagram profile -->
-                <a href="https://www.instagram.com/priyanshu._.kashyap_" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff; font-size: 12px;"></i></a>
+                <a href="https://www.instagram.com/swastika_v2/?hl=en"><i class="fa-brands fa-instagram" style="color: #ffffff; font-size: 12px;"></i></a>
             </div>
             <div class="linkedin-icon">
                 <!-- Link to your linkedIn profile -->
-                <a href="https://www.linkedin.com/in/priyanshu-kashyap-8196a928a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fa-brands fa-linkedin-in" style="color: #ffffff; font-size: 12px;"></i></a>  
+                <a href="https://in.linkedin.com/in/swastika-paul-478817325" target="_blank"><i class="fa-brands fa-linkedin-in" style="color: #ffffff; font-size: 12px;"></i></a>  
             </div>
         </div>
         <div class="options">
